# council-of-alignment

./: .env.example  .gitignore  LICENSE  README.md  api_v1.py  app.py  attachment_context.py  auth.py  briefing_generator.py  chat_engine.py  cli.py  config.py  council-of-alignment-CLAUDE.md  council-of-alignment-business-plan.md  council_pipeline.py  database.py  dispatcher.py  fetch_synthesis.py  file_manager.py  github_context.py  requirements.txt  reset_round2.py  reviewer_tracker.py  session.html  session_manager.py  style.css  synthesis_engine.py  test_api.py  test_api2.py  test_convene.py  test_e2e.py  test_lead.py  test_round2_dedup.py  the-council-design-v2.md
deploy/: add_offsite_cron.py  fix_bind.py  fix_docker_bind.py  fix_nginx.py  fix_nonroot.py  fix_permissions.py  fix_ports.py  fix_service.py  fix_ssh.py  fix_tokens.py  fix_venv.py  nginx-council  offsite_backup.py  pull_backup.sh  query_demo.py  verify_security.py
mcp_server/: README.md  council_client.py  pyproject.toml  server.py
mcp_server/src/council_of_alignment/: __init__.py  client.py  server.py
static/: app.js  style.css
templates/: admin.html  base.html  home.html  new.html  privacy.html  session.html  settings.html  stats.html  terms.html
