[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "council-of-alignment"
version = "0.1.0"
description = "MCP server for Council of Alignment — multi-model AI design review"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
council-of-alignment = "council_of_alignment.server:main"

[project.urls]
Homepage = "https://council.stardreamgames.com"
Repository = "https://github.com/scifi-signals/council-of-alignment"
